objects/Hotspots__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FINS_Q_Branch_Demo_Reference__c</fullName>
        <description>Field choice selection indicates that the corresponding record is referenced in one or more official Q-Branch demo guides.</description>
        <label>Q-Branch Demo Reference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FINS_Q_Branch_Demo_Guide</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prototype_Screen_Configuration__c</fullName>
        <label>Prototype Screen Configuration</label>
        <referenceTo>Prototype_Screen_Configuration__c</referenceTo>
        <relationshipLabel>Hotspots</relationshipLabel>
        <relationshipName>Hotspots</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Target_Screen__c</fullName>
        <label>Target Screen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_URL__c</fullName>
        <label>Target URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X_cordinate__c</fullName>
        <label>X-cordinate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Y_cordinate__c</fullName>
        <label>Y-cordinate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Hotspots</label>
    <nameField>
        <label>Hotspots Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hotspots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>